--- a/ruoyi-visual/ruoyi-easyretry-server/src/main/resources/application.yml
+++ b/ruoyi-visual/ruoyi-easyretry-server/src/main/resources/application.yml
@@ -28,9 +28,6 @@ logging:
   config: classpath:logback-plus.xml
 
 management:
-  # 解决 er 服务有 context-path 无法监控问题
-  server:
-    port: 8801
   endpoints:
     web:
       exposure:
@@ -51,6 +48,9 @@ spring:
         # 注册组
         group: @nacos.discovery.group@
         namespace: ${spring.profiles.active}
+        metadata:
+          # 解决 er 服务有 context-path 无法监控问题
+          management.context-path: ${server.servlet.context-path}/actuator
       config:
         # 配置组
         group: @nacos.config.group@
