--- a/config/nacos/seata-server.properties
+++ b/config/nacos/seata-server.properties
@@ -10,7 +10,7 @@ store.mode=db
 store.lock.mode=db
 store.session.mode=db
 #Used for password encryption
-store.publicKey=
+#store.publicKey=
 
 #These configurations are required if the `store mode` is `db`. If `store.mode,store.lock.mode,store.session.mode` are not equal to `db`, you can remove the configuration block.
 store.db.datasource=hikari
