--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
         <spring-boot.version>3.2.6</spring-boot.version>
-        <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <spring-cloud.version>2023.0.2</spring-cloud.version>
         <spring-boot-admin.version>3.2.3</spring-boot-admin.version>
         <mybatis.version>3.5.16</mybatis.version>
         <mybatis-plus.version>3.5.6</mybatis-plus.version>
@@ -37,7 +37,7 @@
         <satoken.version>1.38.0</satoken.version>
         <lombok.version>1.18.32</lombok.version>
         <logstash.version>7.4</logstash.version>
-        <easy-es.version>2.0.0-beta7</easy-es.version>
+        <easy-es.version>2.0.0</easy-es.version>
         <elasticsearch.version>7.14.0</elasticsearch.version>
         <skywalking-toolkit.version>8.16.0</skywalking-toolkit.version>
         <bouncycastle.version>1.76</bouncycastle.version>
